# mysql-proxy

./: CMakeLists.txt  mysql-proxy.sln
mysql-proxy/: common.cpp  common.h  logger.cpp  logger.h  main.cpp  mysql-proxy.vcxproj  mysql-proxy.vcxproj.filters  mysql_com_query_sniffer.h  mysql_command_mitm.cpp  mysql_command_mitm.h  mysql_command_sniffer.cpp  mysql_command_sniffer.h  mysql_packet_mitm.cpp  mysql_packet_mitm.h  mysql_request_mitm.cpp  mysql_request_mitm.h  mysql_streaming_sniffer.h  tcp_bridge.cpp  tcp_bridge.h  tcp_mitm.h  tcp_size_logger.cpp  tcp_size_logger.h
src/: common.cpp  common.h  logger.cpp  logger.h  main.cpp  mysql_packet_mitm.cpp  mysql_packet_mitm.h  tcp_bridge.cpp  tcp_bridge.h  tcp_mitm.h
